# minerva

./: .env.toolchain  .gitignore  LICENSE.txt  README.md  build.py  cli.py  news.md  pyproject.toml  setup.py
minerva/: arbiter.py  cache.py  core.py  csr.py  gpr.py  isa.py  mem.py  reg.py  stage.py  wishbone.py
minerva/csr/: __init__.py  action.py  reg.py
minerva/test/: test_cache.py  test_units_divider.py  test_units_multiplier.py  utils.py
minerva/units/: adder.py  branch.py  compare.py  decoder.py  divider.py  exception.py  fetch.py  ifetch.py  loadstore.py  logic.py  multiplier.py  predict.py  regfile.py  rvficon.py  shifter.py  trigger.py
minerva/units/debug/: __init__.py  controller.py  dmi.py  jtag.py  regfile.py  top.py  unit.py  wbm.py  wbmaster.py
test/: test_cache.py  test_units_divider.py  test_units_multiplier.py
tests/: test_cache.py  test_units_divider.py  test_units_multiplier.py
