[tool.pdm.version]
source = "scm"

[project]
dynamic = ["version"]

name = "minerva"
description = "A 32-bit RISC-V soft processor"
authors = [{name = "Jean-François Nguyen", email = "jf@jfng.fr"}]
license = {file = "LICENSE.txt"}

requires-python = "~=3.8"
dependencies = [
    "amaranth[builtin-yosys]<0.6,>=0.5",
    "amaranth_soc @ git+https://github.com/amaranth-lang/amaranth-soc",
    "yowasp-yosys",
]

[project.urls]
"Source Code" = "https://github.com/minerva-cpu/minerva"
"Bug Tracker" = "https://github.com/minerva-cpu/minerva/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
_.env_file = ".env.toolchain"
test.composite = ["test-code"]
test-code.cmd = "python -m unittest discover -t . -s tests -v"
